# lab1

./: CMakeLists.txt  LinkedListSharedPtr.hpp  LinkedListUniquePtr.hpp  SharedPtr.hpp  UniquePtr.hpp  interface.cpp  interface.hpp  load_test_results.csv  main.cpp  matplotlibcpp.h  plot.gp  tests.cpp  tests.hpp
